# HPCC-Platform

./: .gitignore  404.html  BUILD_ME.html  CMakeLists.txt  README.html  hashmap.json  index.html  version.cmake
assets/: BUILD_ME.md.6bf7vUrl.js  BUILD_ME.md.6bf7vUrl.lean.js  BUILD_ME.md.AYOWwWqu.js  BUILD_ME.md.AYOWwWqu.lean.js  BUILD_ME.md.BO1Cu8bt.js  BUILD_ME.md.BO1Cu8bt.lean.js  BUILD_ME.md.BRjgEdIv.js  BUILD_ME.md.BRjgEdIv.lean.js  BUILD_ME.md.CLrsHy1L.lean.js  BUILD_ME.md.Clty8zHx.lean.js  BUILD_ME.md.Cx9gd157.js  BUILD_ME.md.Cx9gd157.lean.js  BUILD_ME.md.DOvOi-JE.js  BUILD_ME.md.DOvOi-JE.lean.js  BUILD_ME.md.DaukYd2k.js  BUILD_ME.md.DaukYd2k.lean.js  BUILD_ME.md.DoOyHs0O.js  BUILD_ME.md.DoOyHs0O.lean.js  BUILD_ME.md.FHCj70Xq.js  BUILD_ME.md.FHCj70Xq.lean.js  BUILD_ME.md.Qzer6fuW.js  BUILD_ME.md.Qzer6fuW.lean.js  BUILD_ME.md.TMdzid9u.js  BUILD_ME.md.TMdzid9u.lean.js  BUILD_ME.md.nDc6e2jS.js  BUILD_ME.md.nDc6e2jS.lean.js  README.md.6VlpUX9P.js  README.md.6VlpUX9P.lean.js  README.md.7wK4OHjH.js  README.md.7wK4OHjH.lean.js  README.md.8FWwKZQD.js  README.md.8FWwKZQD.lean.js  README.md.BCZbml_k.js  README.md.BCZbml_k.lean.js  README.md.BRv5OgLH.js  README.md.BRv5OgLH.lean.js  README.md.BdQ0h3ef.js  README.md.BdQ0h3ef.lean.js  README.md.CDxK8mP4.js  README.md.CDxK8mP4.lean.js  (+2782 more)
cmake_modules/: DOCUMENTATION.html  commonSetup.cmake
configuration/: CMakeLists.txt
devdoc/: BuildWorkflows.html  CodeGenerator.html  CodeReviews.html  CodeSubmissions.html  DevDocs.html  DevTestWithLDAP.html  DeveloperDocs.html  Development.html  ESDLFunctions.html  EndUsers.html  GitAuthenticate.html  LDAPSecurityManager.html  MemoryManager.html  Metrics.html  NewFileProcessing.html  Operations.html  OptimizingRoxieQueryPerformance.html  QAUsers.html  README.html  Remote File Roxie.html  SecurityConfig.html  SecurityUserAuthentication.html  StyleGuide.html  TestWorkflows.html  UserBuildAssets.html  VersionSupport.html  Workunits.html  dali.html  helmReadmes.html  indexformats.html  newActivity.html  roxie.html
dockerfiles/: README.html
docs/: DOCUMENTATION.html
ecllibrary/: StyleGuide.html
esp/services/ws_configurator/: CMakeLists.txt  ws_configurator.cpp  ws_configurator.hpp  ws_configurator_plugin.cpp
initfiles/: DOCUMENTATION.html
metrics/: CMakeLists.txt  ComponentConfigHelper.cpp  ComponentConfigHelper.hpp  CountMetric.hpp  CountableMetric.hpp  DistributionMetric.hpp  GaugeMetric.hpp  IMeasurement.hpp  IMetric.hpp  IMetricSet.hpp  IMetricSink.hpp  IMetricsReporter.hpp  (+17 more)
(+572 files in other folders)
